log
Thu 25 Apr 2024 04:00:52 AM UTC: 
 hashmap.c | 118 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 116 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
9ed0b0b
Thu 25 Apr 2024 04:01:14 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  13|2
total_score: 50/70
52889b9
Thu 25 Apr 2024 04:02:29 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccuVAINk.o: in function `first_test':
test.c:(.text+0x1101): undefined reference to `firstMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x1151): undefined reference to `firstMap'
collect2: error: ld returned 1 exit status
Compilation failed
70d76e4
Thu 25 Apr 2024 04:02:58 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c:179:8: error: redefinition of ‘nextMap’
  179 | Pair * nextMap(HashMap * map) {
      |        ^~~~~~~
hashmap.c:146:8: note: previous definition of ‘nextMap’ with type ‘Pair *(HashMap *)’ {aka ‘Pair *(struct HashMap *)’}
  146 | Pair * nextMap(HashMap * map) {
      |        ^~~~~~~
Compilation failed
c387972
Thu 25 Apr 2024 04:03:26 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
1f4feb2
Thu 25 Apr 2024 04:03:40 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
4643df3
Thu 25 Apr 2024 09:08:27 PM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  11|2
total_score: 50/70
0b50fff
